# dpg

./: .gitignore  .rfc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  go.mod  go.sum
.githooks/: pre-commit
.github/workflows/: build-docs.yml  ci-idea.yml  ci-lang.yml  ci-lsp.yml  ci-nvim.yml  ci-plugins.yml  ci.yml  editor-grammar.yml  editor-helix.yml  editor-idea.yml  editor-lsp.yml  editor-nvim.yml  editor-vscode.yml  grammar-release.yml  idea-release.yml  lsp-release.yml  nvim-release.yml  pages.yml  release-dpg.yml  release-grammar.yml  release-homebrew.yml  release-idea.yml  release-lsp.yml  release-nvim.yml  release.yml  (+2 more)
core/: go.sum
docs/: development.md  editor-integration.md  ide-plugins-plan.md  index.md  installation.md
examples/: compile_test.go  helpers_test.go  migrate_test.go  portability_test.go
integration/: roundtrip_test.go
lang/grammar/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
lang/grammar/bindings/go/: binding_test.go
lang/grammar/bindings/node/: binding.cc  index.js
lang/grammar/bindings/rust/: lib.rs
lang/grammar/queries/: highlights.scm  injections.scm  locals.scm
lang/grammar/scripts/: test.sh
lang/grammar/src/: grammar.json  node-types.json  parser.c  scanner.c
lang/grammar/test/corpus/: functions.txt  macros.txt  schemas.txt  tables.txt  types.txt  views.txt
rfc/: dpg-1.md  v0.8.0.md
scripts/: changelog.sh  install-lsp.sh  install.sh  setup.sh  tag.sh
site/: go.mod
website/: .gitignore  go.mod  package-lock.json  package.json
(+430 files in other folders)
