[package]
name = "tree-sitter-dpg"
description = "Dpg grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "dpg"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/dullkingsman/dpg"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
